# siaod-RTU-MIREA

./: СИАОД-ПР6.1-Авраменко-ИКБО-11-24.docx  СИАОД-ПР6.2-Авраменко-ИКБО-11-24.docx
practice6/6.1/: CMakeLists.txt  HashTable.cpp  HashTable.h  Reader.cpp
practice6/6.2/: CMakeLists.txt  main.cpp  results.csv
practice6/Hash/: HashTable.h  Reader.h  main.cpp
